# accurate-operator-reproducibility

./: .gitignore  AccuracyAnalysis.m  AccuracyAnalysisArcUp.m  Benchmarks.h  GCAConstLatIntersections.h  README.md  arcs_helpers.h  csv_helpers.h  generate_arcs.cpp  intermediate_results.cpp  run_benchmark.sh  run_benchmarks.cpp  simd_fma.hh
accuracy_experiments/: AccuracyAnalysis.m  AccuracyAnalysisArcUp.m  AccuracyAnalysisArcUpCGAL.m  AccuracyAnalysisCGAL.m  Benchmarks.h  CGAL_accuracy.cc  CMakeLists.txt  GCAConstLatIntersections.h  IntermediateAnalysis.m  csv_helpers.h  gcsxsc.py  generate_arcs.cpp  geometries.py  intermediate_results.cpp  krumm_accuracy.nb  run_accuracy_benchmark.sh  run_benchmarks.cpp  sanitize_arcs.cpp  utils.py
accuracy_experiments/mathematica_data/: CGAL_Relative_Error.csv  CGAL_Relative_Error_ArcUp.csv  Float64_Relative_Error.csv  Float64_Relative_Error_ArcUp.csv  MPFR16_Relative_Error.csv  MPFR16_Relative_Error_ArcUp.csv  MPFR17_Relative_Error.csv  MPFR17_Relative_Error_ArcUp.csv  MPFR18_Relative_Error.csv  MPFR18_Relative_Error_ArcUp.csv  MPFR19_Relative_Error.csv  MPFR19_Relative_Error_ArcUp.csv  MPFR20_Relative_Error.csv  MPFR20_Relative_Error_ArcUp.csv  MPFR22_Relative_Error.csv  MPFR22_Relative_Error_ArcUp.csv  MPFR24_Relative_Error.csv  MPFR24_Relative_Error_ArcUp.csv  MPFR26_Relative_Error.csv  MPFR26_Relative_Error_ArcUp.csv  MPFR28_Relative_Error.csv  MPFR28_Relative_Error_ArcUp.csv  MPFR30_Relative_Error.csv  MPFR30_Relative_Error_ArcUp.csv  MPFR32_Relative_Error.csv  MPFR32_Relative_Error_ArcUp.csv  Our_Relative_Error.csv  Our_Relative_Error_ArcUp.csv  Quadruple_Relative_Error_ArcUp.csv  {0,1},{2,89},{89,90}_intermediate_analysis_double.csv  {0,1},{2,89},{89,90}_intermediate_analysis_our.csv  {0,1},{2,89},{89,90}_intermediate_analysis_quadruple.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_16.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_17.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_18.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_19.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_20.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_22.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_24.csv  {0,1},{2,89},{89,90}_intermediate_result_MPFR_26.csv  (+17 more)
benchmark_results/: 0_000000_0_000001_float64_results_double.csv  0_000000_0_000001_mpfr_16_results.csv  0_000000_0_000001_our_results_double.csv  0_000000_0_000001_quadruple_results_double.csv  0_000001_0_000010_float64_results_double.csv  0_000001_0_000010_mpfr_16_results.csv  0_000001_0_000010_our_results_double.csv  0_000001_0_000010_quadruple_results_double.csv  0_000010_0_000100_float64_results_double.csv  0_000010_0_000100_mpfr_16_results.csv  0_000010_0_000100_our_results_double.csv  0_000010_0_000100_quadruple_results_double.csv  0_000100_0_001000_float64_results_double.csv  0_000100_0_001000_mpfr_16_results.csv  0_000100_0_001000_our_results_double.csv  0_000100_0_001000_quadruple_results_double.csv  0_001000_0_010000_float64_results_double.csv  0_001000_0_010000_mpfr_16_results.csv  0_001000_0_010000_our_results_double.csv  0_001000_0_010000_quadruple_results_double.csv  0_010000_0_100000_float64_results_double.csv  0_010000_0_100000_mpfr_16_results.csv  0_010000_0_100000_our_results_double.csv  0_010000_0_100000_quadruple_results_double.csv  0_100000_1_000000_float64_results_double.csv  0_100000_1_000000_mpfr_16_results.csv  0_100000_1_000000_our_results_double.csv  0_100000_1_000000_quadruple_results_double.csv  10_000000_20_000000_float64_results_double.csv  10_000000_20_000000_mpfr_16_results.csv  10_000000_20_000000_our_results_double.csv  10_000000_20_000000_quadruple_results_double.csv  1_000000_10_000000_float64_results_double.csv  1_000000_10_000000_mpfr_16_results.csv  1_000000_10_000000_our_results_double.csv  1_000000_10_000000_quadruple_results_double.csv  20_000000_30_000000_float64_results_double.csv  20_000000_30_000000_mpfr_16_results.csv  20_000000_30_000000_our_results_double.csv  20_000000_30_000000_quadruple_results_double.csv  (+96 more)
build_gcc13/: CMakeCache.txt  Makefile  cmake_install.cmake  generate_arcs  intermediate_results  run_benchmarks
cmake/: FindGMP.cmake
generated_arcs/: 0_000000_0_000001Arcs_Exponent.csv  0_000001_0_000010Arcs_Exponent.csv  0_000010_0_000100Arcs_Exponent.csv  0_000100_0_001000Arcs_Exponent.csv  0_001000_0_010000Arcs_Exponent.csv  0_010000_0_100000Arcs_Exponent.csv  0_100000_1_000000Arcs_Exponent.csv  10_000000_20_000000Arcs_Exponent.csv  1_000000_10_000000Arcs_Exponent.csv  20_000000_30_000000Arcs_Exponent.csv  30_000000_40_000000Arcs_Exponent.csv  40_000000_50_000000Arcs_Exponent.csv  50_000000_60_000000Arcs_Exponent.csv  60_000000_70_000000Arcs_Exponent.csv  70_000000_80_000000Arcs_Exponent.csv  80_000000_89_000000Arcs_Exponent.csv  89_000000_89_900000Arcs_Exponent.csv  89_900000_89_990000Arcs_Exponent.csv  89_990000_89_990200Arcs_Exponent.csv  89_990200_89_990400Arcs_Exponent.csv  89_990400_89_990600Arcs_Exponent.csv  89_990600_89_990800Arcs_Exponent.csv  89_990800_89_999000Arcs_Exponent.csv  89_999000_89_999040Arcs_Exponent.csv  89_999040_89_999080Arcs_Exponent.csv  89_999080_89_999120Arcs_Exponent.csv  89_999120_89_999160Arcs_Exponent.csv  (+7 more)
performance_experiments/: CMakeLists.txt  GCAConstLatIntersections.h  GCA_ConstLat_Performance_Benchmark_parallelized.cc  GCA_ConstLat_Performance_Benchmark_scalar_MPFR_Matrix.cc  GCA_ConstLat_Performance_Benchmark_scalar_MPFR_Points.cc  GCA_ConstLat_Performance_Benchmark_vectorized.cc  README.md  Vectorized_Benchmark_template.hh  compare_performance.cc  forward_declarations.hh  generate_input.hh  new_performance.cc  new_performance.hh  old_performance.cc  old_performance.hh  run_benchmark.sh  scalar_performance_test.cc  scalar_type_benchmark.hh
performance_experiments/CGAL_intersection/: CGAL_intersection.cc  CMakeLists.txt  run_cgal.sh
performance_experiments/cmake/: FindMPFR.cmake
performance_experiments/instantiations/: double.cc  double_parallel.cc  vec_width2.cc  vec_width2_parallel.cc  vec_width4.cc  vec_width4_parallel.cc  vec_width8.cc  vec_width8_parallel.cc
(+167 files in other folders)
